#git hub complete

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>JIHWAN YANG</title>
-  <link rel="shortcut icon" href="titleimg-modified.PNG">
+  <link rel="shortcut icon" href="img/titleimg-modified.PNG">
 </head>
 
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="mypic-modified.PNG"></td>
+      <td><img src="img/mypic-modified.PNG"></td>
       <td>
         <h1>JIHWAN YANG</h1>
         <em>
