#modify file name

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
+<!--https://jihwan123450.github.io/udemy_start/-->
 <head>
   <meta charset="utf-8">
   <title>JIHWAN YANG</title>
-  <link rel="shortcut icon" href="img/titleimg-modified.PNG">
+  <link rel="shortcut icon" href="img\titleimg-modified.png">
 </head>
 
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="img/mypic-modified.PNG"></td>
+      <td><img src="img\mypic_modified.png"></td>
       <td>
         <h1>JIHWAN YANG</h1>
         <em>
