#my webpage CSS done

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <title>JIHWAN YANG</title>
   <link rel="shortcut icon" href="img\titleimg-modified.png">
+  <link rel="stylesheet" href="CSS\styles.css">
 </head>
 
 <body>
   <table cellspacing="20px">
     <tr>
-      <td><img src="img\mypic_modified.png"></td>
+      <td><img class="mypic" src="img\mypic_modified.png"></td>
       <td>
         <h1>JIHWAN YANG</h1>
         <em>
@@ -22,7 +23,7 @@
     </tr>
   </table>
 
-  <hr size="2px" noshade>
+  <hr >
   <h3>Education</h3>
 
   <ul>
@@ -95,8 +96,8 @@
     </tbody>
   </table>
   <hr>
-  <a href="hobbies.html"> My Hobbies</a>
-  <a href="contact-me.html">Contact Me</a>
+  <a class="link" href="hobbies.html"> My Hobbies</a>
+  <a class="link" href="contact-me.html">Contact Me</a>
 
 
 </body>
